apps/visualizator-fe/src/style.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: dark;
  color: rgba(255, 255, 255, 0.87);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  background-color: black !important;
}

body,
html {
  height: 100%;
}

#root {
  width: 100%;
  height: 100%;
}

#canvas-container {
  width: 100%;
  height: 100%;
}

#canvas-container canvas {
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
  background: black;
}

canvas#scene2d {
  height: 100%;
  width: 100%;
  outline: none;
  padding: 100px;

  background: rgba(255, 255, 255, 0.889);
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

.mantine-Tabs-panel {
  display: flex;
  flex: 1;
  flex-grow: 1 !important;
}

.recharts-tooltip-wrapper {
  z-index: 1000;
}

